--- a/CarAppV3/app/src/main/res/values/strings.xml
+++ b/CarAppV3/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- TAGs-->
+    <string name="image_tracker_tag">ImageTracker</string>
 </resources>
